kubernetes/code-server-demo/code-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      name: code-server
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: codercom/code-server:4.23.0-39
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: code-server
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
      restartPolicy: Always
