kubernetes/code-server-demo/code-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-svc
  namespace: demo
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
