kubernetes/code-server-demo/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/rewrites: "serviceName=code-server-svc rewrite=/"
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /code
            pathType: Prefix
            backend:
              service:
                name: code-server-svc
                port:
                  number: 8080
